open-nars/com/googlecode/opennars/parser/loan/loanParser.java
package com.googlecode.opennars.parser.loan;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class loanParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT_BASE", "IRI_REF", "DOT", "AT_IMPORT", "AT_PREFIX", "PNAME_NS", "AT_DELAY", "LPAREN", "INTEGER", "RPAREN", "EXCLAMATION", "QUESTION", "PERCENT", "DECIMAL", "SEMICOLON", "CONJ", "COMMA", "DISJ", "NOT", "PAST", "PRESENT", "FUTURE", "INHERITANCE", "SIMILARITY", "INSTANCE", "PROPERTY", "INSTANCE_PROPERTY", "IMPLICATION", "IMPLICATION_PRED", "IMPLICATION_RETRO", "IMPLICATION_CONC", "EQUIVALENCE", "EQUIVALENCE_PRED", "EQUIVALENCE_CONC", "AMPERSAND", "BAR", "OPEN_BRACE", "CLOSE_BRACE", "LBRACKET", "RBRACKET", "MINUS", "TILDE", "STAR", "QUERY_VAR", "STM_VAR", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "TRUE", "FALSE", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", "PNAME_LN", "EOL", "WS", "PN_PREFIX", "PN_LOCAL", "LANGLE", "RANGLE", "PN_CHARS_BASE", "DIGIT", "LANGTAG", "EXPONENT", "PLUS", "ECHAR", "PN_CHARS_U", "VARNAME", "PN_CHARS", "COMMENT", "REFERENCE"
    };
    public static final int COMMA=20;
    public static final int PN_CHARS_U=75;
    public static final int MINUS=44;
    public static final int PERCENT=16;
    public static final int AT_PREFIX=8;
    public static final int OPEN_BRACE=40;
    public static final int DOUBLE=49;
    public static final int AT_BASE=4;
    public static final int EQUIVALENCE=35;
    public static final int FALSE=57;
    public static final int PN_CHARS_BASE=69;
    public static final int EQUIVALENCE_CONC=37;
    public static final int QUERY_VAR=47;
    public static final int AT_DELAY=10;
    public static final int LBRACKET=42;
    public static final int INHERITANCE=26;
    public static final int INSTANCE=28;
    public static final int TILDE=45;
    public static final int DECIMAL=17;
    public static final int QUESTION=15;
    public static final int CONJ=19;
    public static final int DISJ=21;
    public static final int IMPLICATION=31;
    public static final int DOT=6;
    public static final int STM_VAR=48;
    public static final int RANGLE=68;
    public static final int INTEGER=12;
    public static final int IMPLICATION_RETRO=33;
    public static final int FUTURE=25;
    public static final int RBRACKET=43;
    public static final int RPAREN=13;
    public static final int PN_PREFIX=65;
    public static final int EQUIVALENCE_PRED=36;
    public static final int LANGLE=67;
    public static final int LPAREN=11;
    public static final int INSTANCE_PROPERTY=30;
    public static final int ECHAR=74;
    public static final int PLUS=73;
    public static final int DIGIT=70;
    public static final int AMPERSAND=38;
    public static final int INTEGER_NEGATIVE=53;
    public static final int PNAME_NS=9;
    public static final int PAST=23;
    public static final int SIMILARITY=27;
    public static final int PROPERTY=29;
    public static final int DECIMAL_POSITIVE=51;
    public static final int STRING_LITERAL_LONG1=60;
    public static final int IMPLICATION_PRED=32;
    public static final int WS=64;
    public static final int PNAME_LN=62;
    public static final int LANGTAG=71;
    public static final int EXCLAMATION=14;
    public static final int PN_LOCAL=66;
    public static final int VARNAME=76;
    public static final int CLOSE_BRACE=41;
    public static final int COMMENT=78;
    public static final int PN_CHARS=77;
    public static final int PRESENT=24;
    public static final int AT_IMPORT=7;
    public static final int STRING_LITERAL_LONG2=61;
    public static final int DOUBLE_NEGATIVE=55;
    public static final int EXPONENT=72;
    public static final int SEMICOLON=18;
    public static final int BAR=39;
    public static final int DECIMAL_NEGATIVE=54;
    public static final int EOF=-1;
    public static final int IRI_REF=5;
    public static final int DOUBLE_POSITIVE=52;
    public static final int REFERENCE=79;
    public static final int EOL=63;
    public static final int INTEGER_POSITIVE=50;
    public static final int STAR=46;
    public static final int NOT=22;
    public static final int STRING_LITERAL2=59;
    public static final int TRUE=56;
    public static final int STRING_LITERAL1=58;
    public static final int IMPLICATION_CONC=34;

        public loanParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g"; }


    public static class document_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start document
    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:9:1: document : ( base_rule )? ( at_rule | sentence )* EOF ;
    public final document_return document() throws RecognitionException {
        document_return retval = new document_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF4=null;
        base_rule_return base_rule1 = null;

        at_rule_return at_rule2 = null;

        sentence_return sentence3 = null;


        Object EOF4_tree=null;

        try {
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:2: ( ( base_rule )? ( at_rule | sentence )* EOF )
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:4: ( base_rule )? ( at_rule | sentence )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:4: ( base_rule )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AT_BASE) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:4: base_rule
                    {
                    pushFollow(FOLLOW_base_rule_in_document27);
                    base_rule1=base_rule();
                    _fsp--;

                    adaptor.addChild(root_0, base_rule1.getTree());

                    }
                    break;

            }

            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:15: ( at_rule | sentence )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=AT_IMPORT && LA2_0<=AT_PREFIX)||LA2_0==AT_DELAY) ) {
                    alt2=1;
                }
                else if ( (LA2_0==IRI_REF||LA2_0==PNAME_NS||(LA2_0>=LPAREN && LA2_0<=INTEGER)||LA2_0==DECIMAL||(LA2_0>=NOT && LA2_0<=FUTURE)||LA2_0==OPEN_BRACE||LA2_0==LBRACKET||(LA2_0>=QUERY_VAR && LA2_0<=PNAME_LN)) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:16: at_rule
            	    {
            	    pushFollow(FOLLOW_at_rule_in_document31);
            	    at_rule2=at_rule();
            	    _fsp--;

            	    adaptor.addChild(root_0, at_rule2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:10:26: sentence
            	    {
            	    pushFollow(FOLLOW_sentence_in_document35);
            	    sentence3=sentence();
            	    _fsp--;

            	    adaptor.addChild(root_0, sentence3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            EOF4=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_document39); 
            EOF4_tree = (Object)adaptor.create(EOF4);
            adaptor.addChild(root_0, EOF4_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end document

    public static class base_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start base_rule
    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:12:1: base_rule : AT_BASE IRI_REF DOT ;
    public final base_rule_return base_rule() throws RecognitionException {
        base_rule_return retval = new base_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AT_BASE5=null;
        Token IRI_REF6=null;
        Token DOT7=null;

        Object AT_BASE5_tree=null;
        Object IRI_REF6_tree=null;
        Object DOT7_tree=null;

        try {
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:13:2: ( AT_BASE IRI_REF DOT )
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:13:4: AT_BASE IRI_REF DOT
            {
            root_0 = (Object)adaptor.nil();

            AT_BASE5=(Token)input.LT(1);
            match(input,AT_BASE,FOLLOW_AT_BASE_in_base_rule50); 
            AT_BASE5_tree = (Object)adaptor.create(AT_BASE5);
            root_0 = (Object)adaptor.becomeRoot(AT_BASE5_tree, root_0);

            IRI_REF6=(Token)input.LT(1);
            match(input,IRI_REF,FOLLOW_IRI_REF_in_base_rule53); 
            IRI_REF6_tree = (Object)adaptor.create(IRI_REF6);
            adaptor.addChild(root_0, IRI_REF6_tree);

            DOT7=(Token)input.LT(1);
            match(input,DOT,FOLLOW_DOT_in_base_rule55); 

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end base_rule

    public static class at_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start at_rule
    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:16:1: at_rule : ( AT_IMPORT IRI_REF DOT | AT_PREFIX PNAME_NS IRI_REF DOT | AT_DELAY LPAREN INTEGER RPAREN DOT );
    public final at_rule_return at_rule() throws RecognitionException {
        at_rule_return retval = new at_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AT_IMPORT8=null;
        Token IRI_REF9=null;
        Token DOT10=null;
        Token AT_PREFIX11=null;
        Token PNAME_NS12=null;
        Token IRI_REF13=null;
        Token DOT14=null;
        Token AT_DELAY15=null;
        Token LPAREN16=null;
        Token INTEGER17=null;
        Token RPAREN18=null;
        Token DOT19=null;

        Object AT_IMPORT8_tree=null;
        Object IRI_REF9_tree=null;
        Object DOT10_tree=null;
        Object AT_PREFIX11_tree=null;
        Object PNAME_NS12_tree=null;
        Object IRI_REF13_tree=null;
        Object DOT14_tree=null;
        Object AT_DELAY15_tree=null;
        Object LPAREN16_tree=null;
        Object INTEGER17_tree=null;
        Object RPAREN18_tree=null;
        Object DOT19_tree=null;

        try {
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:16:9: ( AT_IMPORT IRI_REF DOT | AT_PREFIX PNAME_NS IRI_REF DOT | AT_DELAY LPAREN INTEGER RPAREN DOT )
            int alt3=3;
            switch ( input.LA(1) ) {
            case AT_IMPORT:
                {
                alt3=1;
                }
                break;
            case AT_PREFIX:
                {
                alt3=2;
                }
                break;
            case AT_DELAY:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("16:1: at_rule : ( AT_IMPORT IRI_REF DOT | AT_PREFIX PNAME_NS IRI_REF DOT | AT_DELAY LPAREN INTEGER RPAREN DOT );", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:16:11: AT_IMPORT IRI_REF DOT
                    {
                    root_0 = (Object)adaptor.nil();

                    AT_IMPORT8=(Token)input.LT(1);
                    match(input,AT_IMPORT,FOLLOW_AT_IMPORT_in_at_rule66); 
                    AT_IMPORT8_tree = (Object)adaptor.create(AT_IMPORT8);
                    root_0 = (Object)adaptor.becomeRoot(AT_IMPORT8_tree, root_0);

                    IRI_REF9=(Token)input.LT(1);
                    match(input,IRI_REF,FOLLOW_IRI_REF_in_at_rule69); 
                    IRI_REF9_tree = (Object)adaptor.create(IRI_REF9);
                    adaptor.addChild(root_0, IRI_REF9_tree);

                    DOT10=(Token)input.LT(1);
                    match(input,DOT,FOLLOW_DOT_in_at_rule71); 

                    }
                    break;
                case 2 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:17:4: AT_PREFIX PNAME_NS IRI_REF DOT
                    {
                    root_0 = (Object)adaptor.nil();

                    AT_PREFIX11=(Token)input.LT(1);
                    match(input,AT_PREFIX,FOLLOW_AT_PREFIX_in_at_rule77); 
                    AT_PREFIX11_tree = (Object)adaptor.create(AT_PREFIX11);
                    root_0 = (Object)adaptor.becomeRoot(AT_PREFIX11_tree, root_0);

                    PNAME_NS12=(Token)input.LT(1);
                    match(input,PNAME_NS,FOLLOW_PNAME_NS_in_at_rule80); 
                    PNAME_NS12_tree = (Object)adaptor.create(PNAME_NS12);
                    adaptor.addChild(root_0, PNAME_NS12_tree);

                    IRI_REF13=(Token)input.LT(1);
                    match(input,IRI_REF,FOLLOW_IRI_REF_in_at_rule82); 
                    IRI_REF13_tree = (Object)adaptor.create(IRI_REF13);
                    adaptor.addChild(root_0, IRI_REF13_tree);

                    DOT14=(Token)input.LT(1);
                    match(input,DOT,FOLLOW_DOT_in_at_rule84); 

                    }
                    break;
                case 3 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:18:4: AT_DELAY LPAREN INTEGER RPAREN DOT
                    {
                    root_0 = (Object)adaptor.nil();

                    AT_DELAY15=(Token)input.LT(1);
                    match(input,AT_DELAY,FOLLOW_AT_DELAY_in_at_rule90); 
                    AT_DELAY15_tree = (Object)adaptor.create(AT_DELAY15);
                    root_0 = (Object)adaptor.becomeRoot(AT_DELAY15_tree, root_0);

                    LPAREN16=(Token)input.LT(1);
                    match(input,LPAREN,FOLLOW_LPAREN_in_at_rule93); 
                    INTEGER17=(Token)input.LT(1);
                    match(input,INTEGER,FOLLOW_INTEGER_in_at_rule96); 
                    INTEGER17_tree = (Object)adaptor.create(INTEGER17);
                    adaptor.addChild(root_0, INTEGER17_tree);

                    RPAREN18=(Token)input.LT(1);
                    match(input,RPAREN,FOLLOW_RPAREN_in_at_rule98); 
                    DOT19=(Token)input.LT(1);
                    match(input,DOT,FOLLOW_DOT_in_at_rule101); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end at_rule

    public static class sentence_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start sentence
    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:21:1: sentence : statement ( judgement | question | goal ) ;
    public final sentence_return sentence() throws RecognitionException {
        sentence_return retval = new sentence_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        statement_return statement20 = null;

        judgement_return judgement21 = null;

        question_return question22 = null;

        goal_return goal23 = null;



        try {
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:22:2: ( statement ( judgement | question | goal ) )
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:22:4: statement ( judgement | question | goal )
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_statement_in_sentence114);
            statement20=statement();
            _fsp--;

            adaptor.addChild(root_0, statement20.getTree());
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:22:14: ( judgement | question | goal )
            int alt4=3;
            switch ( input.LA(1) ) {
            case DOT:
                {
                alt4=1;
                }
                break;
            case QUESTION:
                {
                alt4=2;
                }
                break;
            case EXCLAMATION:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("22:14: ( judgement | question | goal )", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:22:15: judgement
                    {
                    pushFollow(FOLLOW_judgement_in_sentence117);
                    judgement21=judgement();
                    _fsp--;

                    root_0 = (Object)adaptor.becomeRoot(judgement21.getTree(), root_0);

                    }
                    break;
                case 2 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:22:26: question
                    {
                    pushFollow(FOLLOW_question_in_sentence120);
                    question22=question();
                    _fsp--;

                    root_0 = (Object)adaptor.becomeRoot(question22.getTree(), root_0);

                    }
                    break;
                case 3 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:22:36: goal
                    {
                    pushFollow(FOLLOW_goal_in_sentence123);
                    goal23=goal();
                    _fsp--;

                    root_0 = (Object)adaptor.becomeRoot(goal23.getTree(), root_0);

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end sentence

    public static class judgement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start judgement
    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:25:1: judgement : DOT ( truthvalue )? ;
    public final judgement_return judgement() throws RecognitionException {
        judgement_return retval = new judgement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DOT24=null;
        truthvalue_return truthvalue25 = null;


        Object DOT24_tree=null;

        try {
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:26:2: ( DOT ( truthvalue )? )
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:26:4: DOT ( truthvalue )?
            {
            root_0 = (Object)adaptor.nil();

            DOT24=(Token)input.LT(1);
            match(input,DOT,FOLLOW_DOT_in_judgement138); 
            DOT24_tree = (Object)adaptor.create(DOT24);
            root_0 = (Object)adaptor.becomeRoot(DOT24_tree, root_0);

            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:26:9: ( truthvalue )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==PERCENT) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:26:9: truthvalue
                    {
                    pushFollow(FOLLOW_truthvalue_in_judgement141);
                    truthvalue25=truthvalue();
                    _fsp--;

                    adaptor.addChild(root_0, truthvalue25.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end judgement

    public static class goal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start goal
    // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:29:1: goal : EXCLAMATION ( truthvalue )? ;
    public final goal_return goal() throws RecognitionException {
        goal_return retval = new goal_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EXCLAMATION26=null;
        truthvalue_return truthvalue27 = null;


        Object EXCLAMATION26_tree=null;

        try {
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:29:6: ( EXCLAMATION ( truthvalue )? )
            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:29:8: EXCLAMATION ( truthvalue )?
            {
            root_0 = (Object)adaptor.nil();

            EXCLAMATION26=(Token)input.LT(1);
            match(input,EXCLAMATION,FOLLOW_EXCLAMATION_in_goal153); 
            EXCLAMATION26_tree = (Object)adaptor.create(EXCLAMATION26);
            root_0 = (Object)adaptor.becomeRoot(EXCLAMATION26_tree, root_0);

            // /Users/jgeldart/Documents/Eclipse/open-nars/com/googlecode/opennars/parser/loan/loan.g:29:21: ( truthvalue )?
            int alt6=2;
            int LA6_0 = input.LA(1);
